[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = 55.0
margin_bottom = -40.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignInButton" type="Button" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Sign In"

[node name="SignOutButton" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 300.0
margin_bottom = 140.0
rect_min_size = Vector2( 200, 50 )
text = "Sign Out"

[node name="SaveGameButton" type="Button" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 230.0
rect_min_size = Vector2( 200, 50 )
text = "Save game"

[node name="ShowSavedGamesButton" type="Button" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 300.0
margin_bottom = 320.0
rect_min_size = Vector2( 200, 50 )
text = "ShowSavedGames"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 360.0
margin_right = 300.0
margin_bottom = 410.0
rect_min_size = Vector2( 200, 50 )
text = "Load saved game"
[connection signal="pressed" from="VBoxContainer/SignInButton" to="." method="_on_SignInButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SignOutButton" to="." method="_on_SignOutButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveGameButton" to="." method="_on_SaveGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ShowSavedGamesButton" to="." method="_on_ShowSavedGamesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
